Chore: Fixed position of cover image on mobile

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -108,7 +108,7 @@ sup {
 
 img {
   border-style: none;
-  object-position: 51% 90% !important;
+  object-position: 52% 90% !important;
 }
 
 svg:not(:root) {
